style(Tabs): make sure focus border is visible

--- a/packages/css/src/tabs.css
+++ b/packages/css/src/tabs.css
@@ -50,6 +50,12 @@
       text-align: center;
       white-space: nowrap;
 
+      @composes ds-focus from './base.css';
+
+      &:focus-visible {
+        outline-offset: calc(var(--ds-border-width-focus) * -1);
+      }
+
       &:not([hidden]) {
         display: flex;
       }
@@ -75,8 +81,6 @@
           border-bottom: 2px solid CanvasText;
         }
       }
-
-      @composes ds-focus from './base.css';
 
       /* We set z-index to make sure the active line does not bleed over the focus indicator */
       &:focus-visible {
